# ptr-tracker-firmware

./: .cproject  .gitignore  .project  CMakeLists.txt  Dockerfile  README.md  docker_build.sh  ptr_tracker_C Debug.launch
Debug/: makefile  objects.list  ptr_tracker_C.elf  ptr_tracker_C.list  ptr_tracker_C.map
Debug/Src/: gps.cyclo  gps.d  gps.su  lora.cyclo  lora.su  main.cyclo  main.d  main.su  subdir.mk  sx126x.cyclo  sx126x.su  sx126x_hal.d  sx126x_hal.su  trackerHw.cyclo  trackerHw.d  trackerHw.su
Debug/Startup/: subdir.mk
Inc/: config.h  flightState.h  gps.h  kplora.h  lora.h  sx126x.h  sx126x_hal.h  telemetrypacket.h  trackerHw.h
Release/: makefile  ptr_tracker_C.elf  ptr_tracker_C.list  ptr_tracker_C.map
Release/Src/: gps.cyclo  gps.su  lora.cyclo  lora.d  lora.su  main.cyclo  main.d  main.su  subdir.mk  sx126x.cyclo  sx126x.d  sx126x.su  sx126x_hal.cyclo  sx126x_hal.d  sx126x_hal.su  syscalls.su  sysmem.su  trackerHw.cyclo  trackerHw.d  trackerHw.su
Release/Startup/: startup_stm32g030f6px.d  subdir.mk
Src/: CMakeLists.txt  STM32G030F6PX_FLASH.ld  gps.c  kplora.c  lora.c  main.c  sx126x.c  sx126x_hal.c  trackerHw.c
Startup/: startup_stm32g030f6px.s
